# CS453-project

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
autoparameterized/: __init__.py  base.py  customizers.py  decorator.py  generators.py  resolver.py
autoparameterized/customizers/: __init__.py  chain.py  length.py  non_empty.py  range.py  regex_string.py  transform.py  type_cast.py
autoparameterized/generators/: __init__.py  bool.py  dataclass.py  date.py  datetime.py  dict.py  enum.py  float.py  int.py  list.py  literal.py  set.py  string.py  tuple.py
examples/: advanced_usage.py  basic_usage.py  collections_usage.py  customizer_usage.py  dataclass_usage.py  typed_dict_usage.py
tests/: __init__.py  specs_for_list_generator.py  specs_for_set_generator.py  specs_for_with_customizer_decorator.py  test_actual_generation.py  test_bool_generator.py  test_chain_customizer.py  test_customizers.py  test_dataclass_generator.py  test_date_generator.py  test_datetime_generator.py  test_decorator_basic.py  test_decorator_count.py  test_dict_generator.py  test_enum_literal_generator.py  test_exports.py  test_float_generator.py  test_generators.py  test_length_customizer.py  test_list_generator.py  test_non_empty_customizer.py  test_regex_string_customizer.py  test_registry_based_generator_resolver.py  test_transform_customizer.py  test_tuple_generator.py  test_type_cast_customizer.py  test_type_resolution.py
